Update IFT3913_JVMdoc.md